# annotation_tool

./: .gitignore  README.md  pyproject.toml
src/endo_io/: __init__.py  cli.py  features.py  images.py  mask.py  model.py  prototype.py
tests/: test_prototype.py
